<resources>
    <string name="app_name">Adopta un Estudiante</string>

    <string name="facebook_app_id">284381725395905</string>
    <string name="fb_login_protocol_scheme">fb284381725395905</string>

    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_seis_caracteres">Contraseña (Al menos 6 caracteres)</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="grupo_de_estudio">gurpo de estudio</string>
    <string name="apuntes">apuntes</string>
    <string name="preguntas_en_grupo">preguntas en grupo</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="login_information">Lorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLoLorem ipsum doloLo</string>
    <string name="olvide_password">Olvidé mi Contraseña</string>
    <string name="aun_no_te_has_registrado">¿Aún no te has registrado? Crea tu cuenta haciendo click aquí</string>
    <string name="adopta_un_estudiante">¡Adopta un Estudiante!</string>
    <string name="nombre">Nombre Completo</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta? Inicia sesión haciendo Click Aquí</string>

    <string name="informacion">Información</string>
    <string name="informacion_general">Información General</string>
    <string name="donde_estudias">¿En dónde estudias?</string>
    <string name="agrega_lugar_de_estudio">Añade el lugar donde estudias</string>
    <string name="que_estudias">¿Qué estudias?</string>
    <string name="agrega_carrera_de_estudio">Añade la carrera que estudias</string>
    <string name="que_edad_tienes">¿Qué edad tienes?</string>
    <string name="agrega_tu_edad">Añade tu edad</string>
    <string name="que_sexo_eres">Sexo</string>
    <string name="informacion_basica">Información Básica</string>
    <string name="especifica_sexo">Hombre / Mujer</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="fecha_nacimiento_standard">dd / mm / aaaa</string>
    <string name="informacion_academica">Información académica</string>
    <string name="que_semestre_cursas">¿Qué semestre cursas?</string>
    <string name="agrega_semestre_que_cursas">Añade el semestre que estas cursando</string>

</resources>