<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab.innovation.unam.adoptaunestudiante.Views.Fragments.MainUserFragment">

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1000dp">


        <!-- INFORMACION BASICA -->
        <LinearLayout
            android:id="@+id/fragment_main_user_basic_information"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toTopOf="parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/informacion_basica"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:id="@+id/fragment_main_user_iv_edit_basic_information"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:foregroundGravity="right"
                    android:src="@android:drawable/ic_menu_edit" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/que_edad_tienes"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/basic_information_user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agrega_tu_edad"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/que_sexo_eres"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/basic_information_user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/especifica_sexo"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fecha_de_nacimiento"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/basic_information_user_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/fecha_nacimiento_standard"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

    <!-- INFORMACION ACADEMICA -->
        <LinearLayout
            android:id="@+id/fragment_main_user_academic_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_main_user_basic_information"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/informacion_academica"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:id="@+id/fragment_main_user_iv_edit_academic_information"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:foregroundGravity="right"
                    android:src="@android:drawable/ic_menu_edit" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/donde_estudias"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agrega_lugar_de_estudio"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/que_estudias"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agrega_carrera_de_estudio"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/que_semestre_cursas"
                android:textSize="16sp"
                android:typeface="serif"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agrega_semestre_que_cursas"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
